# mediancode-backend

./: .dockerignore  .env.development.example  .env.local.example  .env.production.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  ENVIRONMENTS.md  Makefile  README.md  TESTING.md  alembic.ini  claude_pyrojects.config  claude_pyrojects.ignore  docker-compose.yml  entrypoint.sh  pyproject.toml  railway.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
api_craft/: extractors.py  main.py  placeholders.py  renderers.py  transformers.py  utils.py
api_craft/models/: template.py
api_craft/templates/: path.j2  pyproject.j2  query.j2  views.j2
deploy/: README.md
deploy/aws/: README.md  app.py  cdk.json
deploy/coolify/: COOLIFY_DEPLOYMENT.md
deploy/fly/: README.md  fly.toml
deploy/railway/: README.md  deploy.py  railway.toml
docs/: 2026-02-24-validator-template-catalogues-backend-prompt.md  COMMIT_MESSAGE_STANDARD.md  COOLIFY_DEPLOYMENT.md  GLOBAL_NAMESPACE_BEHAVIOR.md  PROMPT_CICD_SETUP.md  SCHEMA_MIGRATION_PHASES.md  USERS_IMPLEMENTATION_PLAN.md  USER_ISOLATION_AUDIT.md  api-spec.yaml  frontend-prompt-parameter-types.md  implementation-gaps.md  seed-shop-api.sql
docs/plans/: 2026-02-23-inline-validators.md  2026-02-24-validator-template-catalogues-backend-design.md  2026-02-24-validator-template-catalogues-implementation.md  2026-02-25-container-types-and-optional-rename-impl.md  2026-02-25-global-ns-edit-guard-backend-prompt.md  2026-02-25-global-ns-edit-guard-impl.md  2026-02-25-namespace-protections-backend-prompt.md  2026-02-25-namespace-protections-impl.md  2026-02-26-enum-check-constraints-design.md  2026-02-26-enum-check-constraints-plan.md  2026-02-27-case-enforcement-design.md  2026-02-27-case-enforcement-plan.md  2026-03-04-generation-interface-consistency-design.md  2026-03-04-generation-interface-consistency-plan.md  2026-03-06-e2e-shop-full-design.md  2026-03-06-e2e-shop-full.md  2026-03-08-database-generation-design.md  2026-03-08-database-generation-plan.md  2026-03-09-generate-options-plan.md  2026-03-10-mutual-exclusivity-design.md  2026-03-10-mutual-exclusivity-frontend.md  2026-03-10-mutual-exclusivity.md  2026-03-10-pk-fk-on-field-associations-design.md  2026-03-10-pk-fk-on-field-associations.md  e2e-test-coverage-matrix.md
hooks/: pre-commit
infra/: README.md
infra/stacks/: backend_stack.py
scripts/: test_generation.py
src/: extractors.py  main.py  renderers.py  transformers.py  utils.py
src/api/: __init__.py  auth.py  database.py  deps.py  main.py  middleware.py  rate_limit.py  settings.py
src/api_craft/: extractors.py  main.py  orm_builder.py  placeholders.py  prepare.py  renderers.py  schema_splitter.py  transformers.py  utils.py
src/median_code_backend/: extractors.py  main.py  renderers.py  transformers.py
src/models/: input.py  template.py
src/templates/: main.j2  makefile.j2  models.j2  requests.j2  responses.j2  views.j2
tests/: conftest.py  test_api_constraints.py  test_api_fields.py  test_api_namespaces.py  test_api_types.py  test_api_validators.py  test_auth.py  test_e2e.py  test_generate.py  test_placeholders.py  test_user_provisioning.py
tests/catalog/: test_system_catalog.py
tests/codegen/: test_cdk_generation.py  test_codegen_domains.py  test_generated_project.py  test_input_and_transform.py
tests/data/: api_craft_api_input.json  complete_api_input.json  items_api.yaml  items_api_input.json  median_code_api_input.json
tests/http/: test_happy_path_and_seeding.py  test_object_member_reconcile.py  test_relationships_and_fields.py  test_validation_and_errors.py
tests/runtime/: test_generated_runtime.py  test_generated_stack.py
tests/seeding/: __init__.py  __main__.py  clerk_auth.py  runner.py  shop_data.py
tests/specs/: items_api.yaml  items_api_db.yaml  items_api_db_uuid.yaml  orders_api_db.yaml  products_api_filters.yaml  shop_api.yaml
tests/support/: __init__.py  api_client.py  catalog_contract.py  generated_app.py  shop_contract.py
tests/test_api/: conftest.py  test_e2e_shop.py  test_e2e_shop_errors.py  test_e2e_shop_full.py  test_enum_check_consistency.py  test_field_appears.py  test_generation_unit.py  test_literals.py  test_name_validation.py  test_object_server_default.py  test_relationship_fk.py  test_relationships.py  test_schemas.py  test_seeding.py
tests/test_api_craft/: conftest.py  test_appears.py  test_codegen.py  test_codegen_relationships.py  test_db_codegen.py  (+9 more)
(+149 files in other folders)
